--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,10 +13,10 @@ opt-level = 3
 
 [dependencies]
 embedded-graphics = "0.7.1"
+fastblur = "0.1.1"
 image = "0.24.5"
 rusttype = "0.9.3"
 serde = { version = "1.0.152", features = ["derive"] }
-serde-wasm-bindgen = "0.4.5"
 serde_json = "1.0.93"
 tiny-skia = "0.8.3"
 wasm-bindgen = "0.2.84"
