--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,10 +11,16 @@ crate-type = ["cdylib", "rlib"]
 [profile.release]
 opt-level = 3
 
+[features]
+default = []
+text = []
+default-font = ["text"]
+
 [dependencies]
 embedded-graphics = "0.7.1"
 fastblur = "0.1.1"
 image = "0.24.5"
+once_cell = "1.17.1"
 rusttype = "0.9.3"
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.93"
